--- a/Day-3/incssp1.css
+++ b/Day-3/incssp1.css
@@ -1,7 +1,29 @@
+h1{
+    margin-top: 10px;
+}
+
+.fixed-position{
+ position: fixed;
+ text-align: center;
+ background-color: brown;
+ margin-top: -15px;
+ width: 1450px;
+ padding: 10px;
+
+
+}
+.relative-position
+{
+    position: relative;
+    margin: 50px;
+    
+}
+
 .box-model{
-    padding: 10px;
+    padding: 20px;
     background-color: palegreen;
-    margin: 5px;
+    margin: 10px;
     padding: 10px;
     border: solid 5px blue;
+
 }
